fix: avatar wrong size display

--- a/28_github_profiles/style.css
+++ b/28_github_profiles/style.css
@@ -69,15 +69,16 @@ main {
 }
 
 .avatar-container {
-  width: 150px;
-  height: 150px;
   padding: 1rem;
   margin-right: 2rem;
 }
 
 .avatar {
+  max-width: 100%;
+  height: 150px;
+  min-width: 150px;
   border-radius: 50%;
-  border: 2px solid var(--accent);
+  border: 6px solid var(--accent);
 }
 
 .stats {
@@ -90,6 +91,7 @@ main {
 
 .repos {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -100,6 +102,10 @@ main {
   text-decoration: none;
   background-color: var(--accent);
   padding: 0.2rem 0.5rem;
+}
+
+.errorMsg {
+  color: rgb(158, 158, 158);
 }
 
 @media (max-width: 600px){
